--- a/notebooks/01.ipynb
+++ b/notebooks/01.ipynb
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "\n<img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784839952952.jpg\" width=\"100\"/>\n**渡部有隆『プログラミングコンテスト攻略のためのアルゴリズムとデータ構造』（マイナビ出版,\n2015）（C，C++，オンラインジャッジ。「文字列のアルゴリズム」は扱われていない。）**\n\n-   千葉工大図書館（紙）\n-   千葉工大図書館（オンライン）　同時アクセス可能1人。60ページまで印刷できる。\n-   紙（新品あるいは古書）　自分のものになる（後輩にあげられる）。\n-   電子書籍　読む権利を購入するだけ。\n-   PDF　Google\n    NotebookLMなどのAIに入力して質問するのに便利（例：「2.2節のAlgorithm\n    1をPythonで実装して」）\n\nメモ\n\n-   競プロの本番の問題を扱わないのに競プロの本を使うのは，オンラインジャッジを使いたいからである。\n-   ♠教科書ではC言語やC++が使われている。それをPythonに翻訳する場合に，変数や関数の名前がPythonの（[PEP\n    8](https://peps.python.org/pep-0008/)）に反する危険がある。例えば，関数名`insertionSort`は，Pythonでは`insertion_sort`とするのが一般的である。しかし，これはあくまで「規約」であるため，この講義では教科書の名前をそのまま使うことにする。そのほかにも，Pythonの規約に従わないことはあるだろう（インデントとか）。",
+      "source": "\n<img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784839952952.jpg\" width=\"100\"/>\n<strong>渡部有隆『プログラミングコンテスト攻略のためのアルゴリズムとデータ構造』（マイナビ出版,\n2015）（C，C++，オンラインジャッジ。「文字列のアルゴリズム」は扱われていない。）</strong>\n\n-   千葉工大図書館（紙）\n-   千葉工大図書館（オンライン）　同時アクセス可能1人。60ページまで印刷できる。\n-   紙（新品あるいは古書）　自分のものになる（後輩にあげられる）。\n-   電子書籍　読む権利を購入するだけ。\n-   PDF　Google\n    NotebookLMなどのAIに入力して質問するのに便利（例：「2.2節のAlgorithm\n    1をPythonで実装して」）\n\nメモ\n\n-   競プロの本番の問題を扱わないのに競プロの本を使うのは，オンラインジャッジを使いたいからである。\n-   ♠教科書ではC言語やC++が使われている。それをPythonに翻訳する場合に，変数や関数の名前がPythonの（[PEP\n    8](https://peps.python.org/pep-0008/)）に反する危険がある。例えば，関数名`insertionSort`は，Pythonでは`insertion_sort`とするのが一般的である。しかし，これはあくまで「規約」であるため，この講義では教科書の名前をそのまま使うことにする。そのほかにも，Pythonの規約に従わないことはあるだろう（インデントとか）。",
       "metadata": {}
     },
     {
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784798172439.jpg\" width=\"100\"/>\n    石田保輝ほか『アルゴリズム図鑑』（翔泳社, 増補改訂版,\n    2023）　アプリもある（一部有料。AppleとGoogleで価格が異なるかもしれない）。\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784065128442.jpg\" width=\"100\"/>\n    大槻兼資『問題解決力を鍛える！アルゴリズムとデータ構造』（講談社,\n    2020）（C++）　競プロ本番の問題が題材になっている。\n-   <img src=\"https://images-fe.ssl-images-amazon.com/images/P/4797304952.09.LZZZZZZZ\" width=\"100\"/>\n    近藤嘉雪『定本Cプログラマのためのアルゴリズムとデータ構造』（ソフトバンク,\n    1998）　（C言語。「グラフのアルゴリズム」は扱われていない。）\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784000103435.jpg\" width=\"100\"/>\n    石畑清『アルゴリズムとデータ構造』（岩波書店,\n    1989）（Pascal，C，Lisp）\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784764906495.jpg\" width=\"100\"/>\n    コルメンほか『アルゴリズムイントロダクション』（近代科学社, 第4版,\n    2024）（擬似コード。[サポートサイト](https://mitpress.mit.edu/9780262046305/introduction-to-algorithms/)にPythonのコード）\n    **CLRS**と略されるが，この講義ではコルメンということもある。\n-   クヌース『The Art of Computer\n    Programming』（KADOKAWA）（擬似コード）　Knuth（1938-）による教科書。全7巻（12章）の予定で，第4巻（4A，4B，4C）の4Bまで刊行されている。**TAOCP**と略されるが（[Oは大文字](https://www-cs-faculty.stanford.edu/~knuth/taocp.html)），この講義ではクヌースということもある。\n\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048694022.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4756147127.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048694162.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048694316.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048930559.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048931148.09.LZZZZZZZ\" width=\"100\"/>\n\n> 私の本のどの5ページを取っても誰かの一生涯分の研究になっているということです。（Peter\n> Seibel『Coders at Work』の第15章「ドナルド・クヌース」）\n\n<img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784274068478.jpg\" width=\"100\"/>",
+      "source": "\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784798172439.jpg\" width=\"100\"/>\n    石田保輝ほか『アルゴリズム図鑑』（翔泳社, 増補改訂版,\n    2023）　アプリもある（一部有料。AppleとGoogleで価格が異なるかもしれない）。\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784065128442.jpg\" width=\"100\"/>\n    大槻兼資『問題解決力を鍛える！アルゴリズムとデータ構造』（講談社,\n    2020）（C++）　競プロ本番の問題が題材になっている。\n-   <img src=\"https://images-fe.ssl-images-amazon.com/images/P/4797304952.09.LZZZZZZZ\" width=\"100\"/>\n    近藤嘉雪『定本Cプログラマのためのアルゴリズムとデータ構造』（ソフトバンク,\n    1998）　（C言語。「グラフのアルゴリズム」は扱われていない。）\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784000103435.jpg\" width=\"100\"/>\n    石畑清『アルゴリズムとデータ構造』（岩波書店,\n    1989）（Pascal，C，Lisp）\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784764906495.jpg\" width=\"100\"/>\n    コルメンほか『アルゴリズムイントロダクション』（近代科学社, 第4版,\n    2024）（擬似コード。<a href=\"https://mitpress.mit.edu/9780262046305/introduction-to-algorithms/\">サポートサイト</a>にPythonのコード）\n    <strong>CLRS</strong>と略されるが，この講義ではコルメンということもある。\n-   クヌース『The Art of Computer\n    Programming』（KADOKAWA）（擬似コード）　Knuth（1938-）による教科書。全7巻（12章）の予定で，第4巻（4A，4B，4C）の4Bまで刊行されている。**TAOCP**と略されるが（[Oは大文字](https://www-cs-faculty.stanford.edu/~knuth/taocp.html)），この講義ではクヌースということもある。\n\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048694022.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4756147127.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048694162.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048694316.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048930559.09.LZZZZZZZ\" width=\"100\"/>\n<img src=\"https://images-fe.ssl-images-amazon.com/images/P/4048931148.09.LZZZZZZZ\" width=\"100\"/>\n\n> 私の本のどの5ページを取っても誰かの一生涯分の研究になっているということです。（Peter\n> Seibel『Coders at Work』の第15章「ドナルド・クヌース」）\n\n<img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784274068478.jpg\" width=\"100\"/>",
       "metadata": {}
     },
     {
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784839977504.jpg\" width=\"100\"/>\n    米田優峻『競技プログラミングの鉄則』（マイナビ出版,\n    2022）（**オンラインジャッジ**，C++・Python・Java）\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784839972776.jpg\" width=\"100\"/>\n    岩下真也ほか『アルゴリズム実技検定公式テキスト　エントリー～中級編』（マイナビ出版,\n    2021）（**オンラインジャッジ**，Python）",
+      "source": "\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784839977504.jpg\" width=\"100\"/>\n    米田優峻『競技プログラミングの鉄則』（マイナビ出版,\n    2022）（<strong>オンラインジャッジ</strong>，C++・Python・Java）\n-   <img src=\"https://ndlsearch.ndl.go.jp/thumbnail/9784839972776.jpg\" width=\"100\"/>\n    岩下真也ほか『アルゴリズム実技検定公式テキスト　エントリー～中級編』（マイナビ出版,\n    2021）（<strong>オンラインジャッジ</strong>，Python）",
       "metadata": {}
     },
     {
@@ -449,8 +449,19 @@
     },
     {
       "cell_type": "markdown",
-      "source": "リストの要素の値を，スペース区切りで出力する。\n\n    a = [1, 2, 3]\n    print(*a)\n    print(\" \".join(map(str, a))) # スペース区切り以外にも対応しやすい方法",
+      "source": "リストの要素の値を，スペース区切りで出力する。",
       "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "a = [1, 2, 3]\n",
+        "print(*a)\n",
+        "print(\" \".join(map(str, a))) # スペース区切り以外にも対応しやすい方法"
+      ]
     },
     {
       "cell_type": "markdown",
