--- a/notebooks/04.ipynb
+++ b/notebooks/04.ipynb
@@ -27,8 +27,39 @@
     },
     {
       "cell_type": "markdown",
-      "source": "\nアルゴリズム図鑑，『独学プログラマー』の第21章\n\n後入れ先出し（Last In First Out，LIFO）のデータ構造である。\n\n問題：[A51](https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_ay) (Stack)",
+      "source": "\nアルゴリズム図鑑，『独学プログラマー』の第21章\n\n後入れ先出し（Last In First Out，LIFO）のデータ構造である。\n\n問題：[A51](https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_ay) (Stack)\n\n入力データを作る。",
       "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile input.dat\n",
+        "5\n",
+        "1 futuremap\n",
+        "1 howtospeak\n",
+        "2\n",
+        "3\n",
+        "2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "出力データを作る。",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile answer.dat\n",
+        "howtospeak\n",
+        "futuremap"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -37,7 +68,53 @@
     },
     {
       "cell_type": "markdown",
-      "source": "\n`collections.deque`を使う。次のようなメソッドがある。\n\n| 一般的な呼び方 | `A = deque()` | メモ                   |\n|----------------|---------------|------------------------|\n| `push(x)`      | `A.append(x)` | 要素の追加             |\n| `pop()`        | `A.pop()`     | 最後尾要素の削除と取得 |\n| `top()`        | `A[-1]`       | 最後尾要素の取得       |\n\nここで一度提出する。",
+      "source": "\n`collections.deque`を使う。次のようなメソッドがある。\n\n| 一般的な呼び方 | `A = deque()` | メモ                   |\n|----------------|---------------|------------------------|\n| `push(x)`      | `A.append(x)` | 要素の追加             |\n| `pop()`        | `A.pop()`     | 最後尾要素の削除と取得 |\n| `top()`        | `A[-1]`       | 最後尾要素の取得       |\n\nコードを書く。",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile test.py\n",
+        "n = int(input())\n",
+        "\n",
+        "# 後は自分で書く。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "実行する。",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!python3 test.py < input.dat"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "出力例と比較する。",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!python3 test.py < input.dat > output.dat\n",
+        "!diff output.dat answer.dat"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "問題がなければ提出する。",
       "metadata": {}
     },
     {
@@ -83,8 +160,33 @@
     },
     {
       "cell_type": "markdown",
-      "source": "\nアルゴリズム図鑑，『独学プログラマー』の第21章\n\n先入れ先出し（First In First Out，FIFO）のデータ構造である。\n\n問題：[A52](https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_az) (Queue)",
+      "source": "\nアルゴリズム図鑑，『独学プログラマー』の第21章\n\n先入れ先出し（First In First Out，FIFO）のデータ構造である。\n\n問題：[A52](https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_az) (Queue)\n\n入力データを作る。",
       "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile input.dat\n",
+        "ここにデータを貼り付ける。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "出力データを作る。",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile answer.dat\n",
+        "ここにデータを貼り付ける。"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -93,7 +195,53 @@
     },
     {
       "cell_type": "markdown",
-      "source": "\n`collections.deque`を使う。次のようなメソッドがある。\n\n| 一般的な呼び方 | `A = deque()` | メモ                            |\n|----------------|---------------|---------------------------------|\n| `isEmpty()`    | `A`           | 空かどうかを`if A:`で判定する。 |\n| `enqueue(x)`   | `A.append(x)` | 先頭要素の追加                  |\n| `dequeue()`    | `A.popleft()` | 先頭要素の削除と取得            |\n| `front()`      | `A[0]`        | 先頭要素の取得                  |",
+      "source": "\n`collections.deque`を使う。次のようなメソッドがある。\n\n| 一般的な呼び方 | `A = deque()` | メモ                            |\n|----------------|---------------|---------------------------------|\n| `isEmpty()`    | `A`           | 空かどうかを`if A:`で判定する。 |\n| `enqueue(x)`   | `A.append(x)` | 先頭要素の追加                  |\n| `dequeue()`    | `A.popleft()` | 先頭要素の削除と取得            |\n| `front()`      | `A[0]`        | 先頭要素の取得                  |\n\nコードを書く。",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile test.py\n",
+        "from collections import deque\n",
+        "\n",
+        "# 後は自分で書く。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "実行する。",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!python3 test.py < input.dat"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "出力例と比較する。",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!python3 test.py < input.dat > output.dat\n",
+        "!diff output.dat answer.dat"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "問題がなければ提出する。",
       "metadata": {}
     },
     {
